2008-08-12  kitone  <kitone@gna.org>

	* NEWS:
	* configure.in:
	Preparing 0.22.2 release.

2008-08-11  kitone  <kitone@gna.org>

	* share/glade/dialog-find-and-replace.glade:
	* share/glade/dialog-preferences.glade:
	* src/gui/DialogFileChooser.cc:
	* src/gui/PreferencesUI.cc:
	Fix: Spelling errors, video/audio sink translation, new translation string.
	Patches by Luboš Staněk.

2008-08-10  kitone  <kitone@gna.org>

	* NEWS:
	* configure.in:
	Preparing 0.22.1 release.

2008-08-10  kitone  <kitone@gna.org>

	* src/utility.cc:
	* src/utility.h:
	Add function set_transient_parent.

	* src/actions/ChangeFramerate.cc:
	* src/actions/DocumentManagement.cc:
	* src/actions/FindAndReplace.cc:
	* src/actions/MoveSubtitles.cc:
	* src/actions/ScaleSubtitles.cc:
	* src/actions/SpellChecking.cc:
	* src/actions/SplitDocument.cc:
	* src/actions/StyleEditor.cc:
	* src/actions/ViewManager.cc:
	* src/gui/DialogCharacterCodings.cc:
	* src/gui/DialogFileChooser.cc:
	* src/gui/PreferencesUI.cc:
	Fix: Dialog parent.

2008-08-10  kitone  <kitone@gna.org>

	* share/glade/Makefile.am:
	Fix: dialog-character-codings.glade missing. Patch again by Luboš Staněk.

2008-08-10  kitone  <kitone@gna.org>

	* src/gui/DialogCharacterCodings.h:
	* src/gui/DialogFileChooser.h:
	Fix: Issue with gcc-4.3 and auto_ptr. Patch by Luboš Staněk.

2008-08-07  kitone  <kitone@gna.org>

	* configure.in:
	* src/actions/SpellChecking.cc:
	* src/actions/SpellChecking.h:
	Remove option to enable/disable enchant.

2008-08-06  kitone  <kitone@gna.org>

	* configure.in:
	Add en_GB, gl, sr, tr and de translations.

2008-08-05  kitone  <kitone@gna.org>

	* NEWS:
	* configure.in:
	Preparing 0.22.0 release.

2008-08-05  kitone  <kitone@gna.org>

	* src/formats/SubtitleMicroDVD.cc:
	Set automatically FRAME edit mode.

2008-08-05  kitone  <kitone@gna.org>

	* src/Subtitles.cc:
	Fix: crash with Subtitles::remove if the subtitle selected is the first.

2008-08-01  kitone  <kitone@gna.org>

	* src/Makefile.am: