@@ -1,2 +1,3 @@
+m4_include([m4/acx_pthread.m4])
+m4_include([m4/ax_lang_compiler_ms.m4])
 m4_include([m4/ax_check_gl.m4])
-
